--- a/GestorApp/GestorApp/Views/NewClientPage.xaml
+++ b/GestorApp/GestorApp/Views/NewClientPage.xaml
@@ -1,7 +1,18 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GestorApp.Views.NewClientPage">
-    
+             x:Class="GestorApp.Views.NewClientPage"
+             Title="New Client">
+
+    <ContentPage.Content>
+        <StackLayout>
+            <Label Text="Client Name:" />
+            <Entry Text="{Binding ClientName, Mode=TwoWay}" FontSize="Medium"/>
+            <StackLayout Orientation="Horizontal">
+                <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"/>
+                <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"/>
+            </StackLayout>
+        </StackLayout>
+    </ContentPage.Content>
     
 </ContentPage>
