--- a/GestorApp/GestorApp/Views/ClientsPage.xaml
+++ b/GestorApp/GestorApp/Views/ClientsPage.xaml
@@ -19,6 +19,12 @@
                     <StackLayout x:DataType="entities:Client">
                         <Label Text="{Binding ClientName}" LineBreakMode="NoWrap" FontSize="16" TextColor="Black"/>
                         <Label Text="{Binding TotalSpendings}" FontSize="12"/>
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer 
+                                NumberOfTapsRequired="1" 
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type local:ClientsViewModel}}, Path=ClientTapped}"
+                                CommandParameter="{Binding .}"/>
+                        </StackLayout.GestureRecognizers>
                     </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
